# MSGFileRenamer

./: .env  .gitignore  LICENSE  MANIFEST.ini  config.py  logger.py  msg_file_renamer.bat  msg_file_renamer.py  msg_file_renamer.spec  msg_file_renamer_SHAPTH.bat  msg_file_renamer_target_notestrun.bat  msg_file_renamer_target_notestrun_filedate.bat  msg_file_renamer_target_notestrun_filedate_pdf.bat  msg_file_renamer_target_testrun.bat  pyproject.toml  readme.md  requirements.txt  setup.py
config/: known_senders.csv
data/sample_files/testset-public/: Das ist eine Test-Email.msg
docs/: excel_handling.md  file_handling.md  msg_directory_scanner.md  msg_file_renamer.md  msg_file_renamer_batchfile.md  msg_generate_new_filename.md  msg_handling.md  test_file_handling.md  test_msg_handling.md  test_rename_handling.md  testset_preparation.md
modules/: msg_directory_scanner.py  msg_generate_new_filename.py  msg_handling.py
tests/functional/: test_file_handling.py  test_file_search_methods.py  test_msg_handling.py  test_msg_handling_old.py  test_rename_handling.py
utils/: excel_handling.py  file_handling.py  pdf_generation.py  testset_preparation.py
